manifests/configmap-reloader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reloader
  name: reloader
  namespace: platform-system
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: reloader
  template:
    metadata:
      labels:
        app: reloader
    spec:
      containers:
        - image: "docker.io/stakater/reloader:v0.0.56"
          imagePullPolicy: IfNotPresent
          name: reloader
          args:
            - --configmap-annotation=reload/configmap
            - --secret-annotation=reload/secret
            - --auto-annotation=reload/all
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
      serviceAccountName: reloader
